# DriveSense-VLM

./: .gitignore  CLAUDE.md  LICENSE  MODEL_CARD.md  README.md  pyproject.toml
configs/: colab.yaml  data.yaml  eval.yaml  inference.yaml  model.yaml  training.yaml
demo/: README.md  app.py  requirements.txt
demo/examples/: README.md
notebooks/: 00_data_exploration.ipynb  00_data_pipeline.ipynb  01_training.ipynb  02_optimization.ipynb  03_benchmark.ipynb  04_evaluation.ipynb  05_quick_start.ipynb
scripts/: colab_setup.py  download_dada2000.sh  download_nuscenes.sh  run_annotation_pipeline.py  run_benchmark.py  run_build_unified_dataset.py  run_dada_extraction.py  run_evaluation.py  run_full_evaluation.py  run_generate_predictions.py  run_nuscenes_filter.py  run_optimize_model.py  run_sanity_check.py  run_spark_pipeline.py  run_training.py  setup_hpc.sh
slurm/: README.md  benchmark.sbatch  eval.sbatch  optimize.sbatch  template.sbatch  train.sbatch
src/drivesense/: __init__.py  __main__.py
src/drivesense/data/: __init__.py  annotation.py  dada_loader.py  dataset.py  nuscenes_loader.py  spark_pipeline.py  transforms.py
src/drivesense/data/prompts/: annotation_system.txt  annotation_user.txt  counterfactual_scenarios.json  counterfactual_user.txt
src/drivesense/eval/: __init__.py  __main__.py  grounding.py  production.py  reasoning.py  robustness.py
src/drivesense/inference/: __init__.py  merge_lora.py  quantize.py  serve.py  tensorrt_vit.py
src/drivesense/training/: __init__.py  __main__.py  callbacks.py  sft_trainer.py
src/drivesense/utils/: __init__.py  config.py  logging.py  visualization.py
tests/: __init__.py  test_annotation.py  test_config.py  test_dada_loader.py  test_dataset.py  test_demo.py  test_grounding.py  test_imports.py  test_merge_lora.py  test_nuscenes_loader.py  test_production.py  test_quantize.py  test_reasoning.py  test_robustness.py  test_serve.py  test_spark_pipeline.py  test_tensorrt.py  test_training.py
